condor (7.7.1+git436-g81fc261-1) UNRELEASED; urgency=low

  * New upstream code. Support for dynamic linking against system
    libraries.
  * Fix build-deps on BOOST.
  * Bumped Standards-version to 3.9.2; no changes necessary.
  * Build using embedded classad library -- upstream will (or did) stop
    releasing it separately.
  * Drop shared library, sysapi and postgres patches -- merged or obsolete.
  * Adjust rules for now included doc source code.
  * Add sanity checks into maintainer script to avoid creating bogus
    directories and installation errors. Thanks to Mats Rynge for reporting.
  * Add Python as runtime dependency.

 -- Michael Hanke <mih@debian.org>  Thu, 29 Sep 2011 21:19:50 +0200

condor (7.6.1-1) UNRELEASED; urgency=low

  * New upstream release.
  * Adjust shared library patch.

 -- Michael Hanke <mih@debian.org>  Sat, 04 Jun 2011 20:36:29 -0400

condor (7.6.0-1) UNRELEASED; urgency=low

  * New upstream stable release.
  * Adjusted patches.
  * Added missing debhelper dependencies.
  * Added missing sysv-style init script symlinks.
  * Fixed various typos.
  * Prevent local classad header files from being used, in favor of
    system-wide libclassad installations.

 -- Michael Hanke <mih@debian.org>  Mon, 18 Apr 2011 22:07:08 -0400

condor (7.5.5+git995-ga9a0d2a-1) UNRELEASED; urgency=low

  * New upstream code from V7.6 branch. Updated various patches, removed some
    merged ones.
  * No longer compile the 'contrib' parts -- upstream recommended it due to
    lack of stability.
  * Added patch to create /var/run/condor upon daemon startup with proper
    permissions. That helps to conform to the FHS that declares /var/run as
    volatile and to be cleaned upon boot. Moreover, some systems have /var/run
    mounted as tmpfs.

 -- Michael Hanke <mih@debian.org>  Tue, 15 Mar 2011 16:37:56 -0400

condor (7.5.4+git567-gb10f6b4-2) UNRELEASED; urgency=low

  * Applied patch to allow adding submit specs in condor_run calls. Thanks to