@@ -1,2 +1,0 @@
-doc/build/html
-doc/build/pdf/*
