@@ -1,3 +1,0 @@
-etc/condor/config.d
-etc/init.d
-var/lib/condor
