@@ -1,0 +1,1 @@
+debian/tmp/usr/lib/libclassad*.so.*
